# src/api/routes/mod.rs
@@ -1,3 +1,4 @@
 pub mod jobs;
 pub mod metrics;
 pub mod openapi;
+pub mod packages;
